nginx-alb/app.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ns-nginx-alb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: ns-nginx-alb
  labels:
    app: nginx-deployment
spec:
  selector:
    matchLabels:
      run: nginx-deployment
  replicas: 1
  template:
    metadata:
      labels:
        run: nginx-deployment
    spec:
      containers:
      - name: nginx-deployment
        image: 512861115106.dkr.ecr.ap-southeast-3.amazonaws.com/hello_world:v3
        ports:
          - containerPort: 80
        resources:
          limits:
            memory: "100Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: ns-nginx-alb
  labels:
    run: nginx-deployment
spec:
  type: NodePort
  selector:
    run: nginx-deployment
  ports:
  - port: 80
    targetPort: 80
